fixed aligning of progress bars and avatars on total progress page

--- a/app/assets/stylesheets/components/_progress.scss
+++ b/app/assets/stylesheets/components/_progress.scss
@@ -27,3 +27,7 @@
   font-size: 24px;
   color: $white;
 }
+
+.total-p-page{
+  padding: 0;
+}
